Añadiendo Pug y creando maquetación

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="es-CO">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AIRLINE - Your next Destination</title>
-  <!-- Styles -->
-</head>
-
-<body>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Airline</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <container class="f-width">
+      <header>
+        <container class="m-width">
+          <nav>
+            <div class="nav_logo">
+              <h2>AIRLINE</h2>
+            </div>
+            <div class="nav_menu"></div>
+          </nav>
+        </container>
+      </header>
+    </container>
+  </body>
 </html>
