--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <header>
       <div class="m-width">
         <nav>
-          <div class="nav__logo">
-            <h1>AIRLINE</h1>
-          </div>
+          <h1 class="nav__logo">AIRLINE</h1>
           <div class="nav__menu">
             <ul>
               <li><a href="#">en<img src="assets/img/arrow-down.svg"></a>
@@ -35,89 +33,89 @@
           <p>Prepare your bags and forget your worries to start enjoying your holidays in this fantastic country</p><a class="button">Buy now</a>
         </div>
       </div>
-      <main>
-        <div class="m-width">
-          <h3>Offers</h3>
-          <section>
-            <article class="card" id="trip-moscow">
-              <figure><img src="assets/img/moscow.jpg"></figure>
-              <p class="card__title">Trip to Moscow</p>
-              <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
-              <p class="card__price">Price $600,86</p>
-            </article>
-            <article class="card" id="trip-puerto_rico">
-              <figure><img src="assets/img/puerto-rico.jpg"></figure>
-              <p class="card__title">Trip to Puerto Rico</p>
-              <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
-              <p class="card__price">Price $600,86</p>
-            </article>
-            <article class="card" id="trip-honduras">
-              <figure><img src="assets/img/honduras.jpg"></figure>
-              <p class="card__title">Trip to Honduras</p>
-              <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
-              <p class="card__price">Price $600,86</p>
-            </article>
-            <section class="card-chosen">
-              <p id="chosen-dest"></p>
-              <div class="card-chosen__divider"></div>
-              <p class="card_chosen__text"></p>
-            </section>
-          </section>
-          <section class="trip-menu">
-            <h4>Menu</h4>
-            <ul class="trip-menu__ul">
-              <li><a href="#">Check-in</a></li>
-              <li><a href="#">Manage My Booking</a></li>
-              <li><a href="#">Search</a></li>
-              <li><a href="#">Destinations</a></li>
-              <li><a href="#">Members</a></li>
-            </ul>
-          </section>
-        </div>
-      </main>
-      <footer>
-        <div class="m-width">
-          <section class="social-nav">
-            <p class="social-nav__title">Follow us</p>
-            <div class="social-nav__icons">
-              <figure><img class="social-nav__icons--facebook" src="assets/img/facebook.svg"></figure>
-              <figure><img class="social-nav__icons--instagram" src="assets/img/instagram.svg"></figure>
-              <figure><img class="social-nav__icons--twitter" src="assets/img/twitter.svg"></figure>
-            </div>
-          </section>
-          <section class="footer-nav">
-            <div class="footer-nav__menu">
-              <p class="footer-nav__menu__title">About Us</p>
-              <p class="footer-nav__menu__text">We want to help passengers to reach their destinations.</p>
-            </div>
-            <div class="footer-nav_menu">
-              <p class="footer-nav__menu__title">Explore</p>
-              <ul class="footer-nav__menu__ul">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Destinations</a></li>
-                <li><a href="#">About</a></li>
-              </ul>
-            </div>
-            <div class="footer-nav__menu">
-              <p class="footer-nav__menu__title">Information</p>
-              <ul class="footer-nav__menu__ul">
-                <li><a href="#">More search</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Testimonials</a></li>
-              </ul>
-            </div>
-            <div class="footer-nav__menu">
-              <p class="footer-nav__menu__title">Services</p>
-              <ul class="footer-nav__menu__ul">
-                <li><a href="#">Manage My Bookings</a></li>
-                <li><a href="#">Checkin</a></li>
-                <li><a href="#">Hotel</a></li>
-                <li><a href="#">Cars</a></li>
-              </ul>
-            </div>
-          </section>
-        </div>
-      </footer>
     </header>
+    <main>
+      <div class="m-width">
+        <h3>Offers</h3>
+        <section>
+          <article class="card" id="trip-moscow">
+            <figure><img src="assets/img/moscow.jpg"></figure>
+            <p class="card__title">Trip to Moscow</p>
+            <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
+            <p class="card__price">Price $600,86</p>
+          </article>
+          <article class="card" id="trip-puerto_rico">
+            <figure><img src="assets/img/puerto-rico.jpg"></figure>
+            <p class="card__title">Trip to Puerto Rico</p>
+            <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
+            <p class="card__price">Price $600,86</p>
+          </article>
+          <article class="card" id="trip-honduras">
+            <figure><img src="assets/img/honduras.jpg"></figure>
+            <p class="card__title">Trip to Honduras</p>
+            <p class="card__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.<a class="card__info__link" href="#">more</a></p>
+            <p class="card__price">Price $600,86</p>
+          </article>
+          <section class="card-chosen">
+            <p id="chosen-dest"></p>
+            <div class="card-chosen__divider"></div>
+            <p class="card_chosen__text"></p>
+          </section>
+        </section>
+        <section class="trip-menu">
+          <h4>Menu</h4>
+          <ul class="trip-menu__ul">
+            <li><a href="#">Check-in</a></li>
+            <li><a href="#">Manage My Booking</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Destinations</a></li>
+            <li><a href="#">Members</a></li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="m-width">
+        <section class="social-nav">
+          <p class="social-nav__title">Follow us</p>
+          <div class="social-nav__icons">
+            <figure><img class="social-nav__icons--facebook" src="assets/img/facebook.svg"></figure>
+            <figure><img class="social-nav__icons--instagram" src="assets/img/instagram.svg"></figure>
+            <figure><img class="social-nav__icons--twitter" src="assets/img/twitter.svg"></figure>
+          </div>
+        </section>
+        <section class="footer-nav">
+          <div class="footer-nav__menu">
+            <p class="footer-nav__menu__title">About Us</p>
+            <p class="footer-nav__menu__text">We want to help passengers to reach their destinations.</p>
+          </div>
+          <div class="footer-nav_menu">
+            <p class="footer-nav__menu__title">Explore</p>
+            <ul class="footer-nav__menu__ul">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Destinations</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav__menu">
+            <p class="footer-nav__menu__title">Information</p>
+            <ul class="footer-nav__menu__ul">
+              <li><a href="#">More search</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Testimonials</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav__menu">
+            <p class="footer-nav__menu__title">Services</p>
+            <ul class="footer-nav__menu__ul">
+              <li><a href="#">Manage My Bookings</a></li>
+              <li><a href="#">Checkin</a></li>
+              <li><a href="#">Hotel</a></li>
+              <li><a href="#">Cars</a></li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
