Generando importaciones Sass y corrigiendo detalles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-CO">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
           <h1 class="nav__logo">AIRLINE</h1>
           <div class="nav__menu">
             <ul>
-              <li><a href="#">en<img src="assets/img/arrow-down.svg"></a>
+              <li class="nav_menu--drop"><a href="#">en<img src="assets/img/arrow-down.svg"></a>
                 <ul class="nav_menu--drop-menu">
                   <li><a href="#">RU - Russian</a></li>
                   <li><a href="#">DE - German</a></li>
@@ -26,7 +26,7 @@
               </li>
             </ul>
             <ul class="nav__menu--main">
-              <li><a href="#">Home</a></li>
+              <li><a class="selected" href="#">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Destinations</a></li>
               <li><a href="#">Contact</a></li>
@@ -129,5 +129,6 @@
         </section>
       </div>
     </footer>
+    <script src="assets/js/script.js"> </script>
   </body>
 </html>
